--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,17 @@
-<h1>chat app www</h1>
+<!DOCTYPE html>
+<html>
+    <head>
+
+    </head>
+    <body>
+        Chat App
+        
+        <form id="message-form">
+            <input name="message" placeholder="Message">
+            <button>Send</button>
+        </form>
+
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/chat.js"></script>
+    </body>
+</html>
