--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html>
     <head>
-
+        <title>Chat App</title>
+        <link rel="icon" href="/img/favicon.png">
+        <link rel="stylesheet" href="/css/styles.min.css">
     </head>
     <body>
-        Chat App
+        <div class="chat">
+            <div class="chat__sidebar">
 
-        <div id="messages" class="chat__messages"></div>
-        
-        <form id="message-form">
-            <input name="message" placeholder="Message">
-            <button>Send</button>
-        </form>
+            </div>
+            <div class="chat__main">
+                <div id="messages" class="chat__messages"></div>
 
-        <button id="send-location">Send location</button>
+                <div class="compose">
+                    <form id="message-form">
+                        <input name="message" placeholder="Message">
+                        <button>Send</button>
+                    </form>
+                    <button id="send-location">Send location</button>
+                </div>                
+            </div>
+        </div>
 
         <script id="message-template" type="text/html">
             <div class="message">
@@ -22,6 +30,16 @@
                     <span class="message__meta">{{createdAt}}</span>
                 </p>
                 <p>{{message}}</p>
+            </div>
+        </script>
+
+        <script id="location-message-template" type="text/html">
+            <div class="message">
+                <p>
+                    <span class="message__name">Some User Name</span>
+                    <span class="message__meta">{{createdAt}}</span>
+                </p>
+                <p><a href="{{url}}" target="_blank">My current location</a></p>
             </div>
         </script>
 
